[package]
name = "pdf-engine-wasm"
version = "0.1.0"
edition = "2021"
description = "Motor de alto rendimiento para edición y exportación de PDF médicos"

[lib]
# Esto es CRUCIAL para generar el binario WASM
crate-type = ["cdylib", "rlib"]

[dependencies]
# El puente entre Rust y JavaScript
wasm-bindgen = "0.2"

# Gestión de errores y logs (útil para debugging en el navegador)
console_error_panic_hook = "0.1.7"

# Para serializar datos entre JS y Rust de forma eficiente
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

[profile.release]
# Optimización extrema para que el archivo .wasm pese lo mínimo
opt-level = "z"
lto = true