[package]
name = "npm-canva-engine"
version = "0.1.0"
edition = "2021"
description = "Motor de alto rendimiento para edición y exportación de PDF médicos"

[lib]
# Esto es CRUCIAL para generar el binario WASM
crate-type = ["cdylib", "rlib"]

[dependencies]
# El puente entre Rust y JavaScript
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
pdf-writer = "0.9"
serde_json = { version = "1", default-features = false, features = ["alloc"] }

# Gestión de errores y logs (útil para debugging en el navegador)
console_error_panic_hook = "0.1.7"

[profile.release]
# Optimización extrema para que el archivo .wasm pese lo mínimo
opt-level = "z"
lto = true